--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "server/",
   "author": "Ayush Goyal <ayush987goyal@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node server/"
+  },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "express": "^4.16.3",
     "jquery": "^3.3.1"
   }
 }
