--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.1.3",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
+    "socket.io": "^2.1.1",
     "toastr": "^2.1.4"
   }
 }
